[package]
name = "cpulimit"
description = "A user-space CPU limiter"
version = "0.2.0"
edition = "2021"
license = "LGPL-3.0-only"
authors = ["Fabien Savy <fabien.savy@tehtris.org>"]
homepage = "https://github.com/tehtris-hub/CpuLimit"
repository = "https://github.com/tehtris-hub/CpuLimit"

[dependencies]
cpulimiter = { path = "../cpulimiter", version = "0.2.0" }
ctrlc = { version = "3.2.2", features = ["termination"] }

[dependencies.clap]
version = "3.1.15"
features = ["derive", "color", "suggestions"]
